--- a/.env.docker
+++ b/.env.docker
@@ -9,7 +9,7 @@ MYSQL_ROOT_PASSWORD=changeme1234
 # REQUIRED: BASIC APP SETTINGS
 # --------------------------------------------
 APP_ENV=develop
-APP_DEBUG=false
+APP_DEBUG=true
 # please regenerate the APP_KEY value by calling `docker-compose run --rm snipeit bash` and then `php artisan key:generate --show` and then copy paste the value here
 APP_KEY=base64:3ilviXqB9u6DX1NRcyWGJ+sjySF+H18CPDGb3+IVwMQ=
 APP_URL=http://localhost:8000
@@ -155,3 +155,4 @@ APP_CIPHER=AES-256-CBC
 GOOGLE_MAPS_API=
 LDAP_MEM_LIM=500M
 LDAP_TIME_LIM=600
+BROADCAST_DRIVER=log
